# chat-microservice

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  merged.json
chat-service/: Dockerfile  requirements.txt
docs/: README.MD
docs/openapi/: openapi.json
message-service/: chat  requirements.txt
message-service/app/: main.py
messaging/: base.py  factory.py
messaging/handlers/: room.py
scripts/: gen-openapi.sh
services/chat-service/: .dockerignore  .env.example  Dockerfile  genproto.sh  pyproject.toml  requirements.txt
services/chat-service/app/: main.py
services/chat-service/app/api/: __init__.py
services/chat-service/app/api/jsonrpc/: __init__.py
services/chat-service/app/api/jsonrpc/handlers/: __init__.py  chat.py
services/chat-service/app/api/ws/handlers/: chat.py
services/chat-service/app/core/: config.py  connection_manager.py  nats.py  rpc.py
services/chat-service/app/core/auth/: service.py
services/chat-service/app/core/jsonrpc/: dispatcher.py  schemas.py
services/chat-service/app/core/messaging/: nats.py
services/chat-service/app/core/messaging/handlers/: __init__.py  chat.py  room.py
services/chat-service/app/domain/chat/: room_service.py
services/chat-service/app/models/: chat.py  rpc.py
services/chat-service/app/services/: rooms.py
services/chat-service/protos/: message_pb2_grpc.py
services/common/: pyproject.toml
services/message-service/: .env.example  Dockerfile  genproto.sh  requirements.txt
services/room-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
(+63 files in other folders)
